samples/_failures_safe/1761196436_a48ad2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_96509744.c:156:1: error: expected declaration specifiers or ‘...’ at end of input
  156 | void print_token_type(
      | ^~~~
